crates/toml_edit/tests/fixtures/invalid/integer/trailing-us-bin.stderr
TOML parse error at line 1, column 23
  |
1 | trailing-us-bin = 0b1_
  |                       ^
Invalid binary integer
Expected digit
